hs-bindgen/examples/golden/macros/reparse.h

/**
 * Function pointers
 */

void funptr_args1 (A arg1,  void (*arg2)());
void funptr_args2 (A arg1,  int  (*arg2)());
void funptr_args3 (A arg1,  void (*arg2)(int));
void funptr_args4 (A arg1,  char (*arg2)(int, double));
void funptr_args5 (A arg1,  int* (*arg2)(int, double));
void const_withoutSign_after7 (A arg1, bool               const arg2);
void const_withoutSign_after8 (A arg1, size_t             const arg2);
// Pointers

void const_pointers_args1 (A arg1, const int * arg2);
void const_pointers_args2 (A arg1, int const * arg2);
void const_pointers_args3 (A arg1, int * const arg2);
void const_pointers_args4 (A arg1, const int * const arg2);
void const_pointers_args5 (A arg1, int const * const arg2);
const int *       const_pointers_ret1 (A arg1);
int const *       const_pointers_ret2 (A arg1);
int * const       const_pointers_ret3 (A arg1);
const int * const const_pointers_ret4 (A arg1);
int const * const const_pointers_ret5 (A arg1);
typedef const A         const_typedef1;
typedef A const         const_typedef2;
typedef const A *       const_typedef3;
typedef A const *       const_typedef4;
typedef A * const       const_typedef5;
typedef const A * const const_typedef6;
typedef A const * const const_typedef7;
struct example_struct_with_const {
  const A         const_field1;
  A const         const_field2;
  const A *       const_field3;
  A const *       const_field4;
  A * const       const_field5;
  const A * const const_field6;
  A const * const const_field7;
};
typedef const A         (*const_funptr1)(int, double);
typedef A const         (*const_funptr2)(int, double);
typedef const A *       (*const_funptr3)(int, double);
typedef A const *       (*const_funptr4)(int, double);
typedef A * const       (*const_funptr5)(int, double);
typedef const A * const (*const_funptr6)(int, double);
typedef A const * const (*const_funptr7)(int, double);
void const_array_elem1(A const   arg1[]);
void const_array_elem2(A const * arg1[]);
void const_array_elem3(A * const arg1[]);
/**
 * Other examples we reparsed /incorrectly/ before language-c
 */

// Explicitly empty parameter list

A noParams1(void);
A noParams2(void) { return 0; }
void noParams3(A arg1, int (*arg2)(void));
// Returning function pointers

void (*funptr_ret1(A arg1)) ();
int  (*funptr_ret2(A arg1)) ();
void (*funptr_ret3(A arg1)) (int);
char (*funptr_ret4(A arg1)) (int, double);
// Returning function pointers to functions that themselves return pointers

int*             (*funptr_ret5(A arg1))  (int, double);
const int*       (*funptr_ret6(A arg1))  (int, double);
int const*       (*funptr_ret7(A arg1))  (int, double);
int* const       (*funptr_ret8(A arg1))  (int, double);
const int* const (*funptr_ret9(A arg1))  (int, double);
int const* const (*funptr_ret10(A arg1)) (int, double);