hs-bindgen/fixtures/macros/reparse/rust-bindgen.rs

unsafe extern "C" {
    pub fn const_withoutSign_after7(arg1: ::std::os::raw::c_int, arg2: bool);
}
unsafe extern "C" {
    pub fn const_withoutSign_after8(arg1: ::std::os::raw::c_int, arg2: usize);
}
unsafe extern "C" {
    pub fn const_pointers_args1(
        arg1: ::std::os::raw::c_int,
        arg2: *const ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn const_pointers_args2(
        arg1: ::std::os::raw::c_int,
        arg2: *const ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn const_pointers_args3(
        arg1: ::std::os::raw::c_int,
        arg2: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn const_pointers_args4(
        arg1: ::std::os::raw::c_int,
        arg2: *const ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn const_pointers_args5(
        arg1: ::std::os::raw::c_int,
        arg2: *const ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn const_pointers_ret1(
        arg1: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn const_pointers_ret2(
        arg1: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn const_pointers_ret3(
        arg1: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn const_pointers_ret4(
        arg1: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn const_pointers_ret5(
        arg1: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_int;
}
pub type const_typedef1 = ::std::os::raw::c_int;
pub type const_typedef2 = ::std::os::raw::c_int;
pub type const_typedef3 = *const ::std::os::raw::c_int;
pub type const_typedef4 = *const ::std::os::raw::c_int;
pub type const_typedef5 = *mut ::std::os::raw::c_int;
pub type const_typedef6 = *const ::std::os::raw::c_int;
pub type const_typedef7 = *const ::std::os::raw::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct example_struct_with_const {
    pub const_field1: ::std::os::raw::c_int,
    pub const_field2: ::std::os::raw::c_int,
    pub const_field3: *const ::std::os::raw::c_int,
    pub const_field4: *const ::std::os::raw::c_int,
    pub const_field5: *mut ::std::os::raw::c_int,
    pub const_field6: *const ::std::os::raw::c_int,
    pub const_field7: *const ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    [
        "Size of example_struct_with_const",
    ][::std::mem::size_of::<example_struct_with_const>() - 48usize];
    [
        "Alignment of example_struct_with_const",
    ][::std::mem::align_of::<example_struct_with_const>() - 8usize];
    [
        "Offset of field: example_struct_with_const::const_field1",
    ][::std::mem::offset_of!(example_struct_with_const, const_field1) - 0usize];
    [
        "Offset of field: example_struct_with_const::const_field2",
    ][::std::mem::offset_of!(example_struct_with_const, const_field2) - 4usize];
    [
        "Offset of field: example_struct_with_const::const_field3",
    ][::std::mem::offset_of!(example_struct_with_const, const_field3) - 8usize];
    [
        "Offset of field: example_struct_with_const::const_field4",
    ][::std::mem::offset_of!(example_struct_with_const, const_field4) - 16usize];
    [
        "Offset of field: example_struct_with_const::const_field5",
    ][::std::mem::offset_of!(example_struct_with_const, const_field5) - 24usize];
    [
        "Offset of field: example_struct_with_const::const_field6",
    ][::std::mem::offset_of!(example_struct_with_const, const_field6) - 32usize];
    [
        "Offset of field: example_struct_with_const::const_field7",
    ][::std::mem::offset_of!(example_struct_with_const, const_field7) - 40usize];
};
pub type const_funptr1 = ::std::option::Option<
    unsafe extern "C" fn(arg1: ::std::os::raw::c_int, arg2: f64) -> ::std::os::raw::c_int,
>;
pub type const_funptr2 = ::std::option::Option<
    unsafe extern "C" fn(arg1: ::std::os::raw::c_int, arg2: f64) -> ::std::os::raw::c_int,
>;
pub type const_funptr3 = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: ::std::os::raw::c_int,
        arg2: f64,
    ) -> *const ::std::os::raw::c_int,
>;
pub type const_funptr4 = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: ::std::os::raw::c_int,
        arg2: f64,
    ) -> *const ::std::os::raw::c_int,
>;
pub type const_funptr5 = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: ::std::os::raw::c_int,
        arg2: f64,
    ) -> *mut ::std::os::raw::c_int,
>;
pub type const_funptr6 = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: ::std::os::raw::c_int,
        arg2: f64,
    ) -> *const ::std::os::raw::c_int,
>;
pub type const_funptr7 = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: ::std::os::raw::c_int,
        arg2: f64,
    ) -> *const ::std::os::raw::c_int,
>;
unsafe extern "C" {
    pub fn const_array_elem1(arg1: *const ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn const_array_elem2(arg1: *mut *const ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn const_array_elem3(arg1: *const *mut ::std::os::raw::c_int);
}
unsafe extern "C" {
    /// Other examples we reparsed /incorrectly/ before language-c
    pub fn noParams1() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn noParams2() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn noParams3(
        arg1: ::std::os::raw::c_int,
        arg2: ::std::option::Option<unsafe extern "C" fn() -> ::std::os::raw::c_int>,
    );
}
unsafe extern "C" {
    pub fn funptr_ret1(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<unsafe extern "C" fn(arg1: ::std::os::raw::c_int)>;
}
unsafe extern "C" {
    pub fn funptr_ret2(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret3(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<unsafe extern "C" fn(arg1: ::std::os::raw::c_int)>;
}
unsafe extern "C" {
    pub fn funptr_ret4(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> ::std::os::raw::c_char,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret5(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *mut ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret6(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *const ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret7(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *const ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret8(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *mut ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret9(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *const ::std::os::raw::c_int,
    >;
}
unsafe extern "C" {
    pub fn funptr_ret10(
        arg1: ::std::os::raw::c_int,
    ) -> ::std::option::Option<
        unsafe extern "C" fn(
            arg1: ::std::os::raw::c_int,
            arg1: f64,
        ) -> *const ::std::os::raw::c_int,
    >;
}
